Rozjetí object loader, skrz webpack copy plugin(musí se 3D objekty loadovat zvlášt staticky) Přechod na A-frame flamework, je to sranda, jen je to VR a kurzor tady dělá kolečko které musíme nejdříve namířit na objekt a pak můžu uplatnovat nějaké ty click eventy. A-frame má komponentovy system, takže je to parádně přehledny a ještě k tomu můžu propojovat s Three.js i Cannon. Takže gravitace taky bude :)

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <title>Game</title>
+
 </head>
 <body>
+<a-scene>
+    <script src="index.js" type="text/javascript"></script>
 
+    <a-assets>
+        <a-asset-item id="scene" src="scene.gltf"></a-asset-item>
+    </a-assets>
+    <!-- Particle system uses 'default' preset, setting custom colors. -->
+    <a-entity position="0 2 1" gltf-model="#scene"
+              scale="0.1 0.1 0.1">
+        <a-animation attribute="rotation" dur="10000" fill="forwards"
+                     to="0 360 0" repeat="indefinite">
+        </a-animation>
+    </a-entity>
+    <a-entity gltf-model="#scene" scale="0.01 0.01 0.01"></a-entity>
+    <a-sphere position="0 1.25 -1" radius="1.25" color="#EF2D5E"></a-sphere>
+    <a-box id="box" position="-1 0.5 1" rotation="0 45 0" width="1" height="1" depth="1"  color="#4CC3D9"></a-box>
+    <a-cylinder position1 id="cylinder" position="1 0.75 1" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+    <a-plane code rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+
+    <a-sky color="#000000"></a-sky>
+
+    <a-entity position="0 2 5" >
+        <a-camera>
+            <a-cursor>Tady</a-cursor>
+        </a-camera>
+    </a-entity>
+    <a-sky color="grey"></a-sky>
+</a-scene>
 </body>
 </html>
